# Thot

./: CMakeLists.txt  LICENSE  README.md  Thot.sln  Thot.vcxproj  impl.txt  main.cpp  main_target.cpp
Features & Bugs/: bugs.txt  impl.txt  report.txt
Thot/: Thot.hpp
Thot/cuda/cu/LowRankCuda/: lowrank.cu
Thot/cuda/cu/activations/: activations.cu
Thot/cuda/cu/attentions/: mha.cu  mla.cu
Thot/cuda/cu/initializations/: random.cu
Thot/cuda/cu/layernorm/: layernorm.cu
Thot/cuda/cu/layers/: conv2d.cu  conv2d_im2col.cu  fc.cu  flatten.cu  maxpool2d.cu  rbm.cu  rcnn.cu  rnn.cu  rnn_kernels.cu  sparse_contractive_ae.cu  spike.cu  vae.cu
Thot/cuda/cu/losses/: loss.cu
Thot/cuda/cu/optimizations/: adam.cu  adamuon.cu  sgd.cu  sgdm.cu
Thot/cuda/cuh/LowRankCuda/: lowrank.cuh
Thot/cuda/cuh/activations/: activations.cuh
Thot/cuda/cuh/attentions/: mha.cuh  mla.cuh
Thot/cuda/cuh/initializations/: random.cuh
Thot/cuda/cuh/layernorm/: layernorm.cuh
Thot/cuda/cuh/layers/: conv2d.cuh  fc.cuh  flatten.cuh  rbm.cuh  rcnn.cuh  rnn.cuh  rnn_kernels.cuh  sparse_contractive_ae.cuh  spike.cuh  vae.cuh
Thot/cuda/cuh/losses/: loss.cuh
Thot/cuda/cuh/optimizations/: adam.cuh  adamuon.cuh  muon.cuh  sgd.cuh  sgdm.cuh
Thot/headers/: impl.txt  network.hpp  tensor.hpp
Thot/headers/LearningProcess/: batch.hpp  kfold.hpp
Thot/headers/activations/: activations.hpp
Thot/headers/attentions/: attentions.hpp
Thot/headers/attentions/details/: mha.hpp  mla.hpp
Thot/headers/data/: data.hpp
Thot/headers/data/details/: cifar.hpp  mnist.hpp
Thot/headers/evaluations/: evaluation.hpp
Thot/headers/evaluations/details/: binary_eval.hpp  classification_eval.hpp  regression_eval.hpp  timeserie_eval.hpp
Thot/headers/initializations/: initializations.hpp
Thot/headers/layernorm/: layernorm.hpp
Thot/headers/layernorm/details/: dyt.hpp  rms.hpp
Thot/headers/layers/: layers.hpp
Thot/headers/layers/details/: conv2d.hpp  fc.hpp  rbm.hpp  rcnn.hpp  rnn.hpp  sparse_contractive_ae.hpp  spike.hpp  vae.hpp
Thot/headers/losses/: losses.hpp
Thot/headers/metrics/: metrics.hpp
Thot/headers/optimizations/: learning_rate.hpp  lr_schedulers.hpp  optimizations.hpp
Thot/headers/optimizations/details/: adam.hpp  adamuon.hpp  muon.hpp  sgd.hpp  (+1 more)
Thot/headers/regularizers/: regularizer.hpp  regularizer_factory.hpp
Thot/headers/utils/: progressbar.h  translators.h  translators.hpp
docs/: README.md
docs/sub/: README_initialization.md  README_layers.md
docs/sub/activation/: README  README.md
docs/sub/attention/: README.md
docs/sub/block/: README.md
docs/sub/data/: README.md
docs/sub/evaluation/: README.md
docs/sub/initialization/: README.md
docs/sub/layer/: README.md
docs/sub/links/: README.md
docs/sub/local/: README.md
docs/sub/loss/: README.md
docs/sub/lrscheduler/: README.md
docs/sub/optimizer/: README.md
docs/sub/plot/: README.md
docs/sub/regularization/: README.md
docs/sub/saveload/: README.md
docs/sub/training/: README.md
include/: Nott.h  Thot.h  Thyn.h
src/: Nott.cpp  Thot.cpp  Thyn.cpp  core.hpp  network.hpp
src/activation/: activation.hpp  apply.hpp
src/activation/details/: dsilu.hpp  gelu.hpp  glu.hpp  leaky_relu.hpp  mish.hpp  psilu.hpp  raw.hpp  relu.hpp  sigmoid.hpp  silu.hpp  softmax.hpp  swiglu.hpp  swish.hpp  tanh.hpp
src/attention/: attention.hpp  builder.hpp
src/attention/details/: head.hpp  kernel.hpp  latent.hpp
src/block/: block.hpp
src/calibration/: calibration.hpp
src/calibration/details/: temperature_scaling.hpp
src/common/: graph.hpp  local.hpp  save_load.hpp  streaming.hpp  stresstest.hpp
src/data/: data.hpp
src/data/details/: dimreduction.hpp  generation.hpp  load.hpp  manipulation.hpp  repair.hpp
src/data/load/: load.hpp  types.hpp
src/data/transform/: dimensionality_reduction.hpp  manipulation.hpp
src/evaluation/: evaluation.hpp
src/evaluation/details/: classification.hpp  timeserie.hpp
src/initialization/: apply.hpp  initialization.hpp
src/layer/: layer.hpp  registry.hpp
src/layer/details/: batchnorm.hpp  conv.hpp  dropout.hpp  fc.hpp  flatten.hpp  instancenorm.hpp  patch_unembed.hpp  pooling.hpp  positional_encoding.hpp  recurrent.hpp  reduce.hpp  residual.hpp  resizing.hpp  s4.hpp  statespace.hpp
src/loss/: loss.hpp
src/loss/details/: bce.hpp  cce.hpp  ce.hpp  cosine_embedding.hpp  dice.hpp  helper.hpp  kl.hpp  lovasz_softmax.hpp  mae.hpp  margin_ranking.hpp  mse.hpp  nll.hpp  reduction.hpp  smooth_l1.hpp  tversky.hpp
src/lrscheduler/: lrscheduler.hpp  registry.hpp
src/lrscheduler/details/: common.hpp  cosineannealing.hpp  exponential.hpp
src/metric/: metric.hpp
src/ntk/: ntk.hpp
src/optimizer/: optimizer.hpp  registry.hpp
src/optimizer/details/: adafactor.hpp  adagrad.hpp  adam.hpp  lamb.hpp  lion.hpp  muon.hpp  rmsprop.hpp  sgd.hpp  sophia.hpp
src/plot/: plot.hpp
src/plot/details/: data.hpp  reliability.hpp  statistics.hpp  training.hpp
src/regularization/: apply.hpp  regularization.hpp
src/regularization/details/: centeringvariance.hpp  common.hpp  decov.hpp  elasticnet.hpp  ewc.hpp  fge.hpp  grouplasso.hpp  jacobian.hpp  klsparsity.hpp  l0hardconcrete.hpp  l1.hpp  l2.hpp  mas.hpp  maxnorm.hpp  nuclearnorm.hpp  orthogonality.hpp  r1.hpp  r2.hpp  sfge.hpp  si.hpp  spectralnorm.hpp  structuredl2.hpp  swa.hpp  swag.hpp  trades.hpp  vat.hpp  wgangp.hpp
src/solver/: registry.hpp  solver.hpp
src/solver/details/: ode.hpp  sde.hpp
src/training/: kfold.hpp
src/utils/: check.hpp  gnuplot.hpp  progressbar.hpp  stresstest.hpp  terminal.hpp
test/: cifar.cpp  ecg.cpp  graphtest.cpp  main.cpp  semi_lazy.cpp  semilazy.cpp  speedtest.cpp  targetsemantic.cpp
test/analysis/: ntk.cpp
test/classification/images/: cifar10.cpp
test/classification/masks/: dubai_segment.cpp
test/classification/timeseries/: etth.cpp  ptbxl.cpp
test/etth/: etth.cpp  plot.gp  wavelet.hpp
test/regression/timeseries/: etth.cpp
tests/: activations_test.cpp  conv2d_test.cpp  cuda_tests.cpp  fc_benchmark.cu  fc_test.cpp  loss_test.cpp  rbm_test.cpp  rnn_sequence_test.cpp  rnn_test.cpp
(+50 files in other folders)
